style: Apply formatting fixes for cleaner and more consistent code

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,4 +1,4 @@
-@im`rt "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css";
+@import "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css";
 
 
 html, body {
